<resources>
    <string name="app_name">Plank 5分钟</string>
    <string name="level">训练</string>
    <string name="statistics">统计数据</string>
    <string name="teach">我是教练</string>
    <string name="add_to_level">添加到训练</string>
    <string name="crunches">ABS Workout\n让你的腹肌更快塑造成型</string>
    <string name="tips2">健身虽好，可不要贪练哦</string>
    <string name="level_teach">教练指导</string>
    <string name="level_1">肥宅青铜</string>
    <string name="level_2">伸手白银</string>
    <string name="level_3">入门黄金</string>
    <string name="level_4">坚韧铂金</string>
    <string name="level_5">健身钻石</string>
    <string name="level_6">肌肉皇冠</string>
    <string name="level_7">毛睿王牌</string>
    <string name="level_8">魔鬼肌肉人</string>
    <string name="level_time">计时%s分钟</string>
    <string name="elbow_plank">手肘</string>
    <string name="finish">so good ！你完成了！</string>
    <string name="full_plank">全</string>
    <string name="kickbacks_of_hands_plank_left">左臂屈伸</string>
    <string name="kickbacks_of_hands_plank_right">右臂屈伸</string>
    <string name="left_hand_right_leg_raise_plank">举起左手和右脚</string>
    <string name="push_up_plank">伏地挺身</string>
    <string name="raised_hand_plank">举手</string>
    <string name="raised_hand_plank_left">举左手</string>
    <string name="raised_hand_plank_right">举右手</string>
    <string name="raised_plank">举脚</string>
    <string name="raised_plank_left">举左脚</string>
    <string name="raised_plank_right">举右脚</string>
    <string name="reverse_plank">反</string>
    <string name="reverse_plank_left">反向左</string>
    <string name="reverse_plank_legs_raised_left">反向抬左脚</string>
    <string name="reverse_plank_legs_raised_right">反向抬右脚</string>
    <string name="reverse_plank_right">反向右</string>
    <string name="right_hand_left_leg_raise_plank">举起右手左脚</string>
    <string name="side_plank">侧</string>
    <string name="side_plank_hip_dips_left">左臀</string>
    <string name="side_plank_hip_dips_right">右臀</string>
    <string name="side_plank_left">侧左</string>
    <string name="side_plank_raised_leg_left">侧右抬脚</string>
    <string name="side_plank_raised_leg_right">侧左抬脚</string>
    <string name="side_plank_right">侧右</string>
    <string name="tips">谨记：中途退出将丢失数据!</string>

    <string name="title_activity_physical_training">PhysicalTrainingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
