<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitle"
    >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        >
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="35dp"
            android:textColor="#fff"
            />
        <TextView
            android:id="@+id/title1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@id/name"
            android:text="@string/level"
            android:layout_alignParentBottom="true"
            android:textColor="#fff"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/title2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_toRightOf="@id/title1"
            android:gravity="center"
            android:text="@string/statistics"
            android:layout_alignParentBottom="true"
            android:textColor="#fff"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/title_teach"
            android:layout_below="@id/name"
            android:layout_toRightOf="@id/title2"
            android:gravity="center"
            android:text="@string/teach"
            android:layout_alignParentBottom="true"
            android:textColor="#fff"
            android:textSize="18sp"
            />

    </RelativeLayout>
    <TextView
        android:id="@+id/page_line"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:background="#ff7f00"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/main_viewpager"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/main_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="100dp"
        />
</android.support.constraint.ConstraintLayout>
